bookservice-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookservice
  template:
    metadata:
      labels:
        app: bookservice
    spec:
      containers:
      - name: bookservice
        image: my-app:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: bookservice
spec:
  type: ClusterIP
  selector:
    app: bookservice
  ports:
  - port: 80
    targetPort: 80
