bookservice-v2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookservice-v2
spec:
  type: ClusterIP
  selector:
    app: bookservice
    version: v2
  ports:
    - port: 80
      targetPort: 80
