fastapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-book-service
spec:
  type: NodePort
  selector:
    app: fastapi-book-service
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
