kafka-alias-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
spec:
  ports:
  - port: 9092
    targetPort: 9092
  selector:
    strimzi.io/cluster: my-kafka-cluster
    strimzi.io/name: my-kafka-cluster-kafka
